fix: adjust deployment path

--- a/example/demo.ipynb
+++ b/example/demo.ipynb
@@ -116,13 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Server configuration\n",
-    "PROD = False\n",
-    "SERVER_URL = \"https://lux-server-jia3y72oka-ma.a.run.app\" if PROD else \"http://localhost:8080\"\n",
+    "PROD = True\n",
+    "SERVER_URL = \"http://api-lux.upskiller.xyz\" if PROD else \"http://localhost:8080\"\n",
     "\n",
     "# Asset paths\n",
     "SAMPLE_IMAGE_PATH = \"../assets/sample.png\"\n",
@@ -139,24 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server Status:\n",
-      "{\n",
-      "  \"services\": {\n",
-      "    \"encoder\": \"ready\",\n",
-      "    \"merger\": \"ready\",\n",
-      "    \"model\": \"ready\",\n",
-      "    \"obstruction\": \"ready\",\n",
-      "    \"stats\": \"ready\"\n",
-      "  },\n",
-      "  \"status\": \"running\"\n",
-      "}\n"
+      "Server returned status code: 521\n"
      ]
     }
    ],
