chore: key fixes

--- a/example/demo.ipynb
+++ b/example/demo.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -254,16 +254,16 @@
     "                        \"x2\": -2, \"y2\": 7.3, \"z2\": 5.4,\n",
     "                        \"window_frame_ratio\": 0.41,\n",
     "                        # \"direction_angle\": 1.5708,\n",
-    "                        # \"obstruction_angle_horizon\": [30 for a in horizon_angles],\n",
-    "                        # \"obstruction_angle_zenith\": [30 for a in zenith_angles]\n",
+    "                        # \"horizon\": [30 for a in horizon_angles],\n",
+    "                        # \"zenith\": [30 for a in zenith_angles]\n",
     "                    },\n",
     "                    \"test_window_2\": {\n",
     "                        \"x1\": 0, \"y1\": 1, \"z1\": 2.8,\n",
     "                        \"x2\": 0.4, \"y2\": 6.8, \"z2\": 5.4,\n",
     "                        \"window_frame_ratio\": 0.41,\n",
     "                        # \"direction_angle\": 0,\n",
-    "                        # \"obstruction_angle_horizon\": [0 for a in horizon_angles],\n",
-    "                        # \"obstruction_angle_zenith\": [0 for a in zenith_angles]\n",
+    "                        # \"horizon\": [0 for a in horizon_angles],\n",
+    "                        # \"zenith\": [0 for a in zenith_angles]\n",
     "                    }\n",
     "                    \n",
     "                }\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -590,8 +590,8 @@
     "                    #     \"x2\": 0.4, \"y2\": 4.8, \"z2\": 5.4,\n",
     "                    #     \"window_frame_ratio\": 0.41,\n",
     "                    #     # \"direction_angle\": 0,\n",
-    "                    #     # \"obstruction_angle_horizon\": [0 for a in horizon_angles],\n",
-    "                    #     # \"obstruction_angle_zenith\": [0 for a in zenith_angles]\n",
+    "                    #     # \"horizon\": [0 for a in horizon_angles],\n",
+    "                    #     # \"zenith\": [0 for a in zenith_angles]\n",
     "                    # }\n",
     "                    #,\n",
     "                    \"test_window_1\": {\n",
